--- a/index.html
+++ b/index.html
@@ -25,14 +25,7 @@
     </div>
 
     <script>
-        const text = `I love Meena deeply, and we have been together for two beautiful years.
-Yes, we had many fights and misunderstandings, but every emotion came from love.
-Even when we were angry, our hearts never wanted to lose each other.
-We both are imperfect, learning, and growing step by step together.
-Real love is not about never fighting, it is about choosing each other every day.
-I still choose you, Meena, with all my heart.
-My love for you is unconditional, patient, and true.
-I hope we heal, understand, and hold each other more gently from now on.`;
+        const text = `Meena, every time I see how sincerely you prepare for your semester exams, my heart fills with pride. Your dedication, patience, and quiet strength inspire me more than you realize. Even on tired days, you never give up, and that’s what makes you truly beautiful to me. Remember, every late night and every effort you put in is taking you closer to your dreams. Believe in yourself the way I believe in you, because you are capable of amazing things. No matter how tough the syllabus feels, I’m always standing beside you, cheering for you silently. Now go ace your exams… because once you finish studying, can I be the chapter you revise for the rest of your life? 💖`;
 
         let i = 0;
         function typeWriter() {
@@ -49,4 +42,5 @@ I hope we heal, understand, and hold each other more gently from now on.`;
 
 </body>
 </html>
+
 
