--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
     </div>
 
     <script>
-        const text = `Meena, every time I see how sincerely you prepare for your semester exams, my heart fills with pride. Your dedication, patience, and quiet strength inspire me more than you realize. Even on tired days, you never give up, and that’s what makes you truly beautiful to me. Remember, every late night and every effort you put in is taking you closer to your dreams. Believe in yourself the way I believe in you, because you are capable of amazing things. No matter how tough the syllabus feels, I’m always standing beside you, cheering for you silently. Now go ace your exams… because once you finish studying, can I be the chapter you revise for the rest of your life? 💖`;
+        const text = `மன்னிப்புக் கேட்கிறேன் மீனா, சொற்கள் தாமதமானாலும், காதல் தாமதமில்லை.
+உன் நினைவே என் மனவானில் எழும் முதல் வெளிச்சம்.
+ஒவ்வொரு மூச்சிலும் உன் பெயர் ஒரு மௌனப் பாடலாக ஒலிக்கிறது.
+காலம் தவறினாலும், என் இதயம் உன்னைத் தவறுவதில்லை.
+என் எண்ணங்கள் எல்லாம் உன் முகவரியையே நாடுகின்றன.
+என் கனவுகளின் வழித்தடமாய் நீயே நிலைத்திருக்கிறாய்.
+சொற்கள் மங்கினாலும், என் காதல் உன்னிடம் என்றும் தெளிவாகவே உள்ளது🌸`;
 
         let i = 0;
         function typeWriter() {
@@ -42,5 +48,6 @@
 
 </body>
 </html>
+
 
 
