--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     </div>
 
     <script>
-        const text = `மன்னிப்புக் கேட்கிறேன் மீனா, சொற்கள் தாமதமானாலும், காதல் தாமதமில்லை.
-உன் நினைவே என் மனவானில் எழும் முதல் வெளிச்சம்.
-ஒவ்வொரு மூச்சிலும் உன் பெயர் ஒரு மௌனப் பாடலாக ஒலிக்கிறது.
-காலம் தவறினாலும், என் இதயம் உன்னைத் தவறுவதில்லை.
-என் எண்ணங்கள் எல்லாம் உன் முகவரியையே நாடுகின்றன.
-என் கனவுகளின் வழித்தடமாய் நீயே நிலைத்திருக்கிறாய்.
-சொற்கள் மங்கினாலும், என் காதல் உன்னிடம் என்றும் தெளிவாகவே உள்ளது🌸`;
+        const text = `My dear Meena 💞,
+I am truly sorry for the anger I showed and for the pain it caused you.
+In that moment of fight, we both got hurt, and I regret my words deeply.
+Seeing you hurt breaks my heart more than anything else.
+My anger was a mistake, but my love for you has never changed.
+I love you unconditionally, beyond misunderstandings and moments of weakness.
+Please forgive me and let me make things right with patience and care.
+Hold my hand 🤍 and let us choose love over anger, together—always.`;
 
         let i = 0;
         function typeWriter() {
@@ -48,6 +49,7 @@
 
 </body>
 </html>
+
 
 
 
