--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
     </div>
 
     <script>
-        const text = `My dear Meena 💞,
-I am truly sorry for the anger I showed and for the pain it caused you.
-In that moment of fight, we both got hurt, and I regret my words deeply.
-Seeing you hurt breaks my heart more than anything else.
-My anger was a mistake, but my love for you has never changed.
-I love you unconditionally, beyond misunderstandings and moments of weakness.
-Please forgive me and let me make things right with patience and care.
-Hold my hand 🤍 and let us choose love over anger, together—always.`;
+        const text = `oii meena exam nallaa pannu ,all the best.
+                       love you so much 💞
+                       Meena, are you always this cute, or do you save it just to distract me?😏.`;
 
         let i = 0;
         function typeWriter() {
@@ -49,6 +44,7 @@ Hold my hand 🤍 and let us choose love over anger, together—always.`;
 
 </body>
 </html>
+
 
 
 
