--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
     </div>
 
     <script>
-        const text = `oii meena exam nallaa pannu ,all the best.
-                       love you so much 💞
-                       Meena, are you always this cute, or do you save it just to distract me?😏.`;
+        const text = `Meena is like Sunday… but better, because Sundays don’t flirt back.
+Sunday makes me relax, but you make me forget what time it is.
+Sunday says “rest,” you say “come closer.”
+I wait all week for Sunday, but I catch myself waiting for you instead.
+Sunday feels good for a day… you feel dangerous to fall for.
+If Sunday had a crush, I’m pretty sure it would be you 😉`;
 
         let i = 0;
         function typeWriter() {
@@ -44,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
