--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
     </div>
 
     <script>
-        const text = `Meena is like Sunday… but better, because Sundays don’t flirt back.
-Sunday makes me relax, but you make me forget what time it is.
-Sunday says “rest,” you say “come closer.”
-I wait all week for Sunday, but I catch myself waiting for you instead.
-Sunday feels good for a day… you feel dangerous to fall for.
-If Sunday had a crush, I’m pretty sure it would be you 😉`;
+        const text = `Meena, today you complete your 3rd semester, and I’m truly proud of how far you’ve come ❤️
+This semester wasn’t easy, but every challenge and mistake taught you something valuable 📘
+You faced your downfall with courage instead of giving up, and that shows your inner strength 💪
+Each lesson you learned has shaped you into a wiser and more confident person 📖
+Now, the 4th semester stands in front of you as a fresh beginning 🌱
+It’s your time to come back stronger, calmer, and more focused ✨
+Leave self-doubt behind and carry only the lessons forward 💭
+Trust your abilities and stay disciplined in your studies 📚
+Move with confidence, love, and positive energy in everything you do ❤️📘
+I believe this semester will be your true comeback, where your aura shines brighter than ever ✨🔥`;
 
         let i = 0;
         function typeWriter() {
@@ -47,6 +51,7 @@ If Sunday had a crush, I’m pretty sure it would be you 😉`;
 
 </body>
 </html>
+
 
 
 
